Bug 1663214 - Explain what format/types ReadPixels expects. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D92500